--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
+    "start": "node server.js",
     "frontend": "npm start --prefix frontend",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
@@ -25,6 +25,7 @@
     "mongo": "^0.1.0",
     "mongoose": "^5.11.7",
     "nodemon": "^2.0.6",
+    "react-loader-spinner": "^3.1.14",
     "stripe": "^8.129.0",
     "validator": "^13.5.2"
   }
